Fixed bug where the quantity was being reset when editing a miscellaneous product. Fixed a bug where the order quanty text boxes for both lumber and miscellaneous products were allowing non-numeric text.

--- a/Thermory.Web/Views/Catalog/_MiscCatalog.cshtml
+++ b/Thermory.Web/Views/Catalog/_MiscCatalog.cshtml
@@ -164,12 +164,14 @@
         var weight = $('#weight' + suffix).val();
         var subCategoryId = $('#miscSubCategoryId' + suffix).val();
         var sortOrder = $('#sortOrder' + suffix).val();
+        var quantity = $('#quantity' + suffix).val();
         var product = {
             Id: id,
             MiscellaneousSubCategoryId: subCategoryId,
             Name: name,
             Description: description,
             Weight: weight,
+            Quantity: quantity,
             SortOrder: sortOrder
         };
 
