--- a/Thermory.Web/Views/Shared/Order/_MiscellaneousProductReview.cshtml
+++ b/Thermory.Web/Views/Shared/Order/_MiscellaneousProductReview.cshtml
@@ -17,15 +17,15 @@
             </thead>
             @foreach (var subCategory in orderMiscSubCategories.OrderBy(s => s.SortOrder).Where(s => s.MiscellaneousCategoryId == category.Id))
             {
-                <tr>
-                    @foreach (var lineItem in Model.OrderMiscellaneousLineItems.Where(li => li.MiscellaneousProduct.MiscellaneousSubCategory.Id == subCategory.Id))
-                    {
-                        <td>@subCategory.Name</td>
-                        <td>@lineItem.MiscellaneousProduct.Name</td>
-                        <td>@lineItem.MiscellaneousProduct.Description</td>
-                        <td>@lineItem.Quantity.ToString("n0")</td>
-                    }
-                </tr>
+                foreach (var lineItem in Model.OrderMiscellaneousLineItems.Where(li => li.MiscellaneousProduct.MiscellaneousSubCategory.Id == subCategory.Id))
+                 {
+                     <tr>
+                         <td>@subCategory.Name</td>
+                         <td>@lineItem.MiscellaneousProduct.Name</td>
+                         <td>@lineItem.MiscellaneousProduct.Description</td>
+                         <td>@lineItem.Quantity.ToString("n0")</td>
+                     </tr>
+                 }
             }
         </table>
     }
