--- a/Thermory.Web/Content/Site.css
+++ b/Thermory.Web/Content/Site.css
@@ -1019,3 +1019,39 @@ td.totalPieceHeading {
     background-color: white;
     border: solid thin black;
 }
+
+.label-as-badge {
+    border-radius: 1em;
+}
+
+.orderSummary {
+    padding: 5px 5px 5px 5px;
+    background-color: #e9e9e9;
+    border: thin solid #ccc;
+    background-image: -webkit-linear-gradient(#f9f9f9, #e4e4e4);
+    background-image: -moz-linear-gradient(#f9f9f9, #e4e4e4);
+    background-image: -ms-linear-gradient(#f9f9f9, #e4e4e4);
+    background-image: -o-linear-gradient(#f9f9f9, #e4e4e4);
+    background-image: linear-gradient(#f9f9f9, #e4e4e4);
+    filter: progid:dximagetransform.microsoft.gradient(startColorstr='#fff9f9f9', endColorstr='#ffe4e4e4', GradientType=0);
+}
+
+.navbar-default {
+    background-color: #e9e9e9;
+    background-image: -webkit-linear-gradient(#f9f9f9, #e4e4e4);
+    background-image: -moz-linear-gradient(#f9f9f9, #e4e4e4);
+    background-image: -ms-linear-gradient(#f9f9f9, #e4e4e4);
+    background-image: -o-linear-gradient(#f9f9f9, #e4e4e4);
+    background-image: linear-gradient(#f9f9f9, #e4e4e4);
+    filter: progid:dximagetransform.microsoft.gradient(startColorstr='#fff9f9f9', endColorstr='#ffe4e4e4', GradientType=0);
+}
+
+.w2ui-grid-toolbar {
+    background-color: #e9e9e9;
+    background-image: -webkit-linear-gradient(#f9f9f9, #e4e4e4);
+    background-image: -moz-linear-gradient(#f9f9f9, #e4e4e4);
+    background-image: -ms-linear-gradient(#f9f9f9, #e4e4e4);
+    background-image: -o-linear-gradient(#f9f9f9, #e4e4e4);
+    background-image: linear-gradient(#f9f9f9, #e4e4e4);
+    filter: progid:dximagetransform.microsoft.gradient(startColorstr='#fff9f9f9', endColorstr='#ffe4e4e4', GradientType=0);
+}
