--- a/Thermory.Web/Content/Site.css
+++ b/Thermory.Web/Content/Site.css
@@ -933,30 +933,209 @@ td.totalPieceHeading {
 
 .btn-primary {
     color: #fff;
-    background-color: #a0522d;
+    background-color: #90522d;
     border-color: #8b4513;
+    background-image: -webkit-linear-gradient(#d2691e, #90522d);
+    background-image: -moz-linear-gradient(#d2691e, #90522d);
+    background-image: -ms-linear-gradient(#d2691e, #90522d);
+    background-image: -o-linear-gradient(#d2691e, #90522d);
+    background-image: linear-gradient(#d2691e, #90522d);
+    filter: progid:dximagetransform.microsoft.gradient(startColorstr='#d2691e', endColorstr='#90522d', GradientType=0);
 }
-
 
     .btn-primary:hover {
         color: #fff;
         background-color: #d2691e;
-        border-color: #a0522d;
+        border-color: #8b4513;
+        background-image: -webkit-linear-gradient(#90522d, #d2691e);
+        background-image: -moz-linear-gradient(#90522d, #d2691e);
+        background-image: -ms-linear-gradient(#90522d, #d2691e);
+        background-image: -o-linear-gradient(#90522d, #d2691e);
+        background-image: linear-gradient(#90522d, #d2691e);
+        filter: progid:dximagetransform.microsoft.gradient(startColorstr='#90522d', endColorstr='#d2691e', GradientType=0);
     }
-
 
     .btn-primary:active:hover, .btn-primary.active:hover, .open > .dropdown-toggle.btn-primary:hover, .btn-primary:active:focus, .btn-primary.active:focus, .open > .dropdown-toggle.btn-primary:focus, .btn-primary:active.focus, .btn-primary.active.focus, .open > .dropdown-toggle.btn-primary.focus {
         color: #fff;
         background-color: #d2691e;
-        border-color: #a0522d;
+        border-color: #90522d;
+        background-image: -webkit-linear-gradient(#90522d, #d2691e);
+        background-image: -moz-linear-gradient(#90522d, #d2691e);
+        background-image: -ms-linear-gradient(#90522d, #d2691e);
+        background-image: -o-linear-gradient(#90522d, #d2691e);
+        background-image: linear-gradient(#90522d, #d2691e);
+        filter: progid:dximagetransform.microsoft.gradient(startColorstr='#90522d', endColorstr='#d2691e', GradientType=0);
     }
-
 
     .btn-primary:active, .btn-primary.active, .open > .dropdown-toggle.btn-primary {
         color: #fff;
         background-color: #d2691e;
-        border-color: #a0522d;
+        border-color: #90522d;
+        background-image: -webkit-linear-gradient(#90522d, #d2691e);
+        background-image: -moz-linear-gradient(#90522d, #d2691e);
+        background-image: -ms-linear-gradient(#90522d, #d2691e);
+        background-image: -o-linear-gradient(#90522d, #d2691e);
+        background-image: linear-gradient(#90522d, #d2691e);
+        filter: progid:dximagetransform.microsoft.gradient(startColorstr='#90522d', endColorstr='#d2691e', GradientType=0);
     }
+
+.btn-info {
+    color: #fff;
+    background-color: #5bc0de;
+    border-color: #5b99ff;
+    background-image: -webkit-linear-gradient(#5bc0de, #31b0d5);
+    background-image: -moz-linear-gradient(#5bc0de, #31b0d5);
+    background-image: -ms-linear-gradient(#5bc0de, #31b0d5);
+    background-image: -o-linear-gradient(#5bc0de, #31b0d5);
+    background-image: linear-gradient(#5bc0de, #31b0d5);
+    filter: progid:dximagetransform.microsoft.gradient(startColorstr='#5bc0de', endColorstr='#31b0d5', GradientType=0);
+}
+
+    .btn-info:hover {
+        color: #fff;
+        background-color: #31b0d5;
+        border-color: #5b99ff;
+        background-image: -webkit-linear-gradient(#31b0d5, #5bc0de);
+        background-image: -moz-linear-gradient(#31b0d5, #5bc0de);
+        background-image: -ms-linear-gradient(#31b0d5, #5bc0de);
+        background-image: -o-linear-gradient(#31b0d5, #5bc0de);
+        background-image: linear-gradient(#31b0d5, #5bc0de);
+        filter: progid:dximagetransform.microsoft.gradient(startColorstr='#31b0d5', endColorstr='#5bc0de', GradientType=0);
+    }
+
+    .btn-info:active:hover, .btn-info.active:hover, .open > .dropdown-toggle.btn-info:hover, .btn-info:active:focus, .btn-info.active:focus, .open > .dropdown-toggle.btn-info:focus, .btn-info:active.focus, .btn-info.active.focus, .open > .dropdown-toggle.btn-info.focus {
+        color: #fff;
+        background-color: #31b0d5;
+        border-color: #5b99ff;
+        background-image: -webkit-linear-gradient(#31b0d5, #5bc0de);
+        background-image: -moz-linear-gradient(#31b0d5, #5bc0de);
+        background-image: -ms-linear-gradient(#31b0d5, #5bc0de);
+        background-image: -o-linear-gradient(#31b0d5, #5bc0de);
+        background-image: linear-gradient(#31b0d5, #5bc0de);
+        filter: progid:dximagetransform.microsoft.gradient(startColorstr='#31b0d5', endColorstr='#5bc0de', GradientType=0);
+    }
+
+    .btn-info:active, .btn-info.active, .open > .dropdown-toggle.btn-info {
+        color: #fff;
+        background-color: #31b0d5;
+        border-color: #5b99ff;
+        background-image: -webkit-linear-gradient(#31b0d5, #5bc0de);
+        background-image: -moz-linear-gradient(#31b0d5, #5bc0de);
+        background-image: -ms-linear-gradient(#31b0d5, #5bc0de);
+        background-image: -o-linear-gradient(#31b0d5, #5bc0de);
+        background-image: linear-gradient(#31b0d5, #5bc0de);
+        filter: progid:dximagetransform.microsoft.gradient(startColorstr='#31b0d5', endColorstr='#5bc0de', GradientType=0);
+    }
+
+.btn-danger {
+    color: #fff;
+    background-color: #d9534f;
+    border-color: #ac2925;
+    background-image: -webkit-linear-gradient(#d9534f, #c9302c);
+    background-image: -moz-linear-gradient(#d9534f, #c9302c);
+    background-image: -ms-linear-gradient(#d9534f, #c9302c);
+    background-image: -o-linear-gradient(#d9534f, #c9302c);
+    background-image: linear-gradient(#d9534f, #c9302c);
+    filter: progid:dximagetransform.microsoft.gradient(startColorstr='#d9534f', endColorstr='#c9302c', GradientType=0);
+}
+
+    .btn-danger:hover {
+        color: #fff;
+        background-color: #c9302c;
+        border-color: #ac2925;
+        background-image: -webkit-linear-gradient(#c9302c, #d9534f);
+        background-image: -moz-linear-gradient(#c9302c, #d9534f);
+        background-image: -ms-linear-gradient(#c9302c, #d9534f);
+        background-image: -o-linear-gradient(#c9302c, #d9534f);
+        background-image: linear-gradient(#c9302c, #d9534f);
+        filter: progid:dximagetransform.microsoft.gradient(startColorstr='#c9302c', endColorstr='#d9534f', GradientType=0);
+    }
+
+    .btn-danger:active:hover, .btn-danger.active:hover, .open > .dropdown-toggle.btn-danger:hover, .btn-danger:active:focus, .btn-danger.active:focus, .open > .dropdown-toggle.btn-danger:focus, .btn-danger:active.focus, .btn-danger.active.focus, .open > .dropdown-toggle.btn-danger.focus {
+        color: #fff;
+        background-color: #c9302c;
+        border-color: #ac2925;
+        background-image: -webkit-linear-gradient(#c9302c, #d9534f);
+        background-image: -moz-linear-gradient(#c9302c, #d9534f);
+        background-image: -ms-linear-gradient(#c9302c, #d9534f);
+        background-image: -o-linear-gradient(#c9302c, #d9534f);
+        background-image: linear-gradient(#c9302c, #d9534f);
+        filter: progid:dximagetransform.microsoft.gradient(startColorstr='#c9302c', endColorstr='#d9534f', GradientType=0);
+    }
+
+    .btn-danger:active, .btn-danger.active, .open > .dropdown-toggle.btn-danger {
+        color: #fff;
+        background-color: #c9302c;
+        border-color: #ac2925;
+        background-image: -webkit-linear-gradient(#c9302c, #d9534f);
+        background-image: -moz-linear-gradient(#c9302c, #d9534f);
+        background-image: -ms-linear-gradient(#c9302c, #d9534f);
+        background-image: -o-linear-gradient(#c9302c, #d9534f);
+        background-image: linear-gradient(#c9302c, #d9534f);
+        filter: progid:dximagetransform.microsoft.gradient(startColorstr='#c9302c', endColorstr='#d9534f', GradientType=0);
+    }
+
+.btn-success {
+    color: #fff;
+    background-color: #5cb85c;
+    border-color: #5b99ff;
+    background-image: -webkit-linear-gradient(#5cb85c, #449d44);
+    background-image: -moz-linear-gradient(#5cb85c, #449d44);
+    background-image: -ms-linear-gradient(#5cb85c, #449d44);
+    background-image: -o-linear-gradient(#5cb85c, #449d44);
+    background-image: linear-gradient(#5cb85c, #449d44);
+    filter: progid:dximagetransform.microsoft.gradient(startColorstr='#5cb85c', endColorstr='#449d44', GradientType=0);
+}
+
+    .btn-success:hover {
+        color: #fff;
+        background-color: #449d44;
+        border-color: #398439;
+        background-image: -webkit-linear-gradient(#449d44, #5cb85c);
+        background-image: -moz-linear-gradient(#449d44, #5cb85c);
+        background-image: -ms-linear-gradient(#449d44, #5cb85c);
+        background-image: -o-linear-gradient(#449d44, #5cb85c);
+        background-image: linear-gradient(#449d44, #5cb85c);
+        filter: progid:dximagetransform.microsoft.gradient(startColorstr='#449d44', endColorstr='#5cb85c', GradientType=0);
+    }
+
+    .btn-success:active:hover, .btn-success.active:hover, .open > .dropdown-toggle.btn-success:hover, .btn-success:active:focus, .btn-success.active:focus, .open > .dropdown-toggle.btn-success:focus, .btn-success:active.focus, .btn-success.active.focus, .open > .dropdown-toggle.btn-success.focus {
+        color: #fff;
+        background-color: #31b0d5;
+        border-color: #5b99ff;
+        background-image: -webkit-linear-gradient(#449d44, #5cb85c);
+        background-image: -moz-linear-gradient(#449d44, #5cb85c);
+        background-image: -ms-linear-gradient(#449d44, #5cb85c);
+        background-image: -o-linear-gradient(#449d44, #5cb85c);
+        background-image: linear-gradient(#449d44, #5cb85c);
+        filter: progid:dximagetransform.microsoft.gradient(startColorstr='#449d44', endColorstr='#5cb85c', GradientType=0);
+    }
+
+    .btn-success:active, .btn-success.active, .open > .dropdown-toggle.btn-success {
+        color: #fff;
+        background-color: #31b0d5;
+        border-color: #5b99ff;
+        background-image: -webkit-linear-gradient(#449d44, #5cb85c);
+        background-image: -moz-linear-gradient(#449d44, #5cb85c);
+        background-image: -ms-linear-gradient(#449d44, #5cb85c);
+        background-image: -o-linear-gradient(#449d44, #5cb85c);
+        background-image: linear-gradient(#449d44, #5cb85c);
+        filter: progid:dximagetransform.microsoft.gradient(startColorstr='#449d44', endColorstr='#5cb85c', GradientType=0);
+    }
+
+.panel-default {
+    border-color: #aaa;
+}
+
+.panel-default > .panel-heading {
+    background-color: #e4e4e4;
+    background-image: -webkit-linear-gradient(#f9f9f9, #e4e4e4);
+    background-image: -moz-linear-gradient(#f9f9f9, #e4e4e4);
+    background-image: -ms-linear-gradient(#f9f9f9, #e4e4e4);
+    background-image: -o-linear-gradient(#f9f9f9, #e4e4e4);
+    background-image: linear-gradient(#f9f9f9, #e4e4e4);
+    filter: progid:dximagetransform.microsoft.gradient(startColorstr='#fff9f9f9', endColorstr='#ffe4e4e4', GradientType=0);
+}
 
 .has-error .form-control {
     background-color: yellow;
@@ -967,7 +1146,7 @@ td.totalPieceHeading {
 }
 
 .glyphicon-primary {
-    color: #a0522d;
+    color: #90522d;
 }
 
 .glyphicon-success {
@@ -1025,6 +1204,8 @@ td.totalPieceHeading {
 }
 
 .orderSummary {
+    font-family: Verdana, Arial, sans-serif;
+    font-size: 11px;
     padding: 5px 5px 5px 5px;
     background-color: #e9e9e9;
     border: thin solid #ccc;
@@ -1033,17 +1214,42 @@ td.totalPieceHeading {
     background-image: -ms-linear-gradient(#f9f9f9, #e4e4e4);
     background-image: -o-linear-gradient(#f9f9f9, #e4e4e4);
     background-image: linear-gradient(#f9f9f9, #e4e4e4);
-    filter: progid:dximagetransform.microsoft.gradient(startColorstr='#fff9f9f9', endColorstr='#ffe4e4e4', GradientType=0);
+    filter: progid:dximagetransform.microsoft.gradient(startColorstr='#f9f9f9', endColorstr='#e4e4e4', GradientType=0);
 }
 
 .navbar-default {
-    background-color: #e9e9e9;
+    border-color: #aaa;
     background-image: -webkit-linear-gradient(#f9f9f9, #e4e4e4);
     background-image: -moz-linear-gradient(#f9f9f9, #e4e4e4);
     background-image: -ms-linear-gradient(#f9f9f9, #e4e4e4);
     background-image: -o-linear-gradient(#f9f9f9, #e4e4e4);
     background-image: linear-gradient(#f9f9f9, #e4e4e4);
-    filter: progid:dximagetransform.microsoft.gradient(startColorstr='#fff9f9f9', endColorstr='#ffe4e4e4', GradientType=0);
+    filter: progid:dximagetransform.microsoft.gradient(startColorstr='#f9f9f9', endColorstr='#e4e4e4', GradientType=0);
+}
+
+.nav-tabs > li.active > a, .nav-tabs > li.active > a:hover, .nav-tabs > li.active > a:focus {
+    border-color: #aaa #aaa #ddd;
+    background-color: #e4e4e4;
+    background-image: -webkit-linear-gradient(#f9f9f9, #e4e4e4);
+    background-image: -moz-linear-gradient(#f9f9f9, #e4e4e4);
+    background-image: -ms-linear-gradient(#f9f9f9, #e4e4e4);
+    background-image: -o-linear-gradient(#f9f9f9, #e4e4e4);
+    background-image: linear-gradient(#f9f9f9, #e4e4e4);
+    filter: progid:dximagetransform.microsoft.gradient(startColorstr='#f9f9f9', endColorstr='#e4e4e4', GradientType=0);
+}
+
+.nav-tabs > li > a:hover {
+    border-color: #aaa #aaa #ddd;
+    background-image: -webkit-linear-gradient(#f9f9f9, #e4e4e4);
+    background-image: -moz-linear-gradient(#f9f9f9, #e4e4e4);
+    background-image: -ms-linear-gradient(#f9f9f9, #e4e4e4);
+    background-image: -o-linear-gradient(#f9f9f9, #e4e4e4);
+    background-image: linear-gradient(#f9f9f9, #e4e4e4);
+    filter: progid:dximagetransform.microsoft.gradient(startColorstr='#f9f9f9', endColorstr='#e4e4e4', GradientType=0);
+}
+
+.nav-tabs > li > a {
+    border-color: #eee #eee #ddd;
 }
 
 .w2ui-grid-toolbar {
@@ -1053,5 +1259,5 @@ td.totalPieceHeading {
     background-image: -ms-linear-gradient(#f9f9f9, #e4e4e4);
     background-image: -o-linear-gradient(#f9f9f9, #e4e4e4);
     background-image: linear-gradient(#f9f9f9, #e4e4e4);
-    filter: progid:dximagetransform.microsoft.gradient(startColorstr='#fff9f9f9', endColorstr='#ffe4e4e4', GradientType=0);
+    filter: progid:dximagetransform.microsoft.gradient(startColorstr='#f9f9f9', endColorstr='#e4e4e4', GradientType=0);
 }
