--- a/Thermory.Web/Views/Shared/Order/_OutstandingSalesOrders.cshtml
+++ b/Thermory.Web/Views/Shared/Order/_OutstandingSalesOrders.cshtml
@@ -5,7 +5,7 @@
     Loading order summary...
 </div>
 <script type="text/javascript">
-    $(document).ready(function() {
+    $(document).ready(function () {
         $.ajax({
             type: 'POST',
             url: '@Url.Action("GetOrderSummary", "SalesOrder")',
@@ -15,6 +15,8 @@
                 renderOrderSummaryResults('@id', data.records);
             },
             error: function (data, status, request) {
+                $('#@id').empty();
+                $('#@id').append('Error loading order summary');
             }
         });
     });
