--- a/Thermory.Web/Views/Shared/_Layout.cshtml
+++ b/Thermory.Web/Views/Shared/_Layout.cshtml
@@ -76,7 +76,7 @@
     </div>
     <nav class="navbar navbar-default navbar-fixed-bottom">
         <div class="container">
-            <div class="float-left">
+            <div class="float-left" style="margin-top: 10px;">
                 &copy; @DateTime.Now.Year - Thermory
             </div>
         </div>
