--- a/Thermory.Web/Views/Shared/_Layout.cshtml
+++ b/Thermory.Web/Views/Shared/_Layout.cshtml
@@ -68,7 +68,7 @@
             </div>
         </div>
     </header>
-    <div id="body" style="padding-top: 10px; margin-bottom: 20px; border-top: solid 1px lightgray;">
+    <div id="body">
         @RenderSection("featured", required: false)
         <section class="content-wrapper clear-fix">
             @RenderBody()
