Added padding around the save button on the inventory audit page because it was getting cut off.

--- a/Thermory.Web/Views/Inventory/Audit.cshtml
+++ b/Thermory.Web/Views/Inventory/Audit.cshtml
@@ -32,10 +32,12 @@
                     @Html.Partial("_MiscellaneousAuditForm", category)
                 </div>
             }
-}
+        }
     </div>
-    <div type="button" class="btn btn-success" onclick="saveInventory();">
-        <span class="glyphicon glyphicon-ok"></span> Save
+    <div style="padding: 10px 0 20px 0;">
+        <div type="button" class="btn btn-success" onclick="saveInventory();">
+            <span class="glyphicon glyphicon-ok"></span> Save
+        </div>
     </div>
 </div>
 
