--- a/Thermory.Web/Views/Inventory/Audit.cshtml
+++ b/Thermory.Web/Views/Inventory/Audit.cshtml
@@ -17,7 +17,7 @@
             }
 }
     </ul>
-    <div class="tab-content">
+    <div class="tab-content" style="padding: 0">
         @{
             foreach (var category in Model.LumberCategories)
             {
@@ -34,7 +34,7 @@
             }
         }
     </div>
-    <div style="padding: 10px 0 20px 0;">
+    <div style="padding-top: 10px;">
         <div type="button" class="btn btn-success" onclick="saveInventory();">
             <span class="glyphicon glyphicon-ok"></span> Save
         </div>
