--- a/Thermory.Web/Views/Shared/_Layout.cshtml
+++ b/Thermory.Web/Views/Shared/_Layout.cshtml
@@ -68,7 +68,7 @@
             </div>
         </div>
     </header>
-    <div id="body">
+    <div id="body" style="margin-bottom: 20px;">
         @RenderSection("featured", required: false)
         <section class="content-wrapper clear-fix">
             @RenderBody()
